--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -9,7 +9,9 @@
 @use 'components/header';
 @use 'components/footer';
 @use 'components/movies';
+@use 'components/movie-details';
 @use 'components/filters';
+@use 'transitions';
 
 // Importations de base
 @tailwind base;
