feat: add vuetify and use it throughout the app

--- a/assets/css/components/comments.scss
+++ b/assets/css/components/comments.scss
@@ -37,13 +37,9 @@
         @apply font-bold;
       }
     }
-    
-    .rating-stars {
-      @apply mt-2 text-lg;
-      
-      :deep(span) {
-        @apply text-yellow-500;
-      }
+
+    .rating-container {
+      @apply flex flex-col;
     }
   }
   
