--- a/assets/css/components/filters.scss
+++ b/assets/css/components/filters.scss
@@ -11,33 +11,21 @@
   
   .filter-group {
     @apply flex-1;
-    
-    .filter-label {
-      @apply block text-sm font-medium text-gray-700 mb-1;
-    }
-    
-    .filter-select {
-      @apply mt-1 block w-full pl-3 pr-10 py-2 text-base border-gray-300 focus:outline-none focus:ring-tmdb-blue focus:border-tmdb-blue sm:text-sm rounded-md;
-    }
   }
 }
 
 .search-container {
-  @apply flex-grow;
-  
-  .search-label {
-    @apply block text-sm font-medium text-gray-700 mb-1;
-  }
+  @apply flex flex-grow flex-wrap items-center justify-end pl-10 gap-y-4;
   
   .search-input-group {
-    @apply flex;
+    @apply flex w-full items-center gap-x-6;
     
     .search-input {
       @apply mt-1 block w-full pl-3 pr-10 py-2 text-base border-gray-300 focus:outline-none focus:ring-tmdb-blue focus:border-tmdb-blue sm:text-sm rounded-l-md;
     }
-    
-    .search-button {
-      @apply mt-1 bg-tmdb-blue text-white px-4 rounded-r-md hover:bg-opacity-90;
-    }
+  }
+
+  .search-status {
+    @apply flex items-center w-full gap-x-6 text-sm;
   }
 }
