--- a/assets/css/components/movie-details.scss
+++ b/assets/css/components/movie-details.scss
@@ -6,10 +6,10 @@
   }
   
   .loading-container {
-    @apply flex flex-col md:flex-row gap-8;
+    @apply flex flex-col md:flex-row gap-8 pt-6;
     
     .skeleton-poster {
-      @apply w-full md:w-1/3 h-96 bg-gray-200 animate-pulse rounded;
+      @apply w-full md:w-1/5 h-96 bg-gray-200 animate-pulse rounded;
     }
     
     .skeleton-content {
